# spacs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: mypy.yml  pytest.yml
spacs/: __init__.py  client.py  conf.py
test/: client_test.py  conftest.py
