[tool.poetry]
name = "spacs"
version = "0.0.6"
description = "Simple Pydantic AIOHTTP Client Sessions"
authors = ["rlebel12"]
readme = "README.md"
repository = "https://github.com/rlebel12/spacs"
packages = [{include = "spacs"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
