[tool.poetry]
name = "spacs"
version = "0.0.9"
description = "Simple Pydantic AIOHTTP Client Sessions"
authors = ["rlebel12"]
readme = "README.md"
repository = "https://github.com/rlebel12/spacs"
packages = [{include = "spacs"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
